Adding js pagination to community notes widget
YV-336 #comment This comes with some caveats. First, the API uses cursors instead of pages for paginating search results. Thus a "state" is needed to persist the cursor to advance to the next result set. This is not a problem when you have app clients b/c there is state between api requests, but without adding a Memcache key, there isn't on web. We *could* add a js array with a long list of cursors, but each cursor is a 256 char string. And if someone was crazy enough to paginate very far, it could cause a browser crash. A cursor would have to be stored for each page returned b/c the API does not support a direction passed to its search api. So you can't just use one cursor, you have to store a list of cursors. Anyways, I've removed the "Previous" pagination (similar to how users search works right now on web).
YV-336 #close

--- a/app/views/sidebars/notes/_list.html.haml
+++ b/app/views/sidebars/notes/_list.html.haml
@@ -2,23 +2,27 @@
   # Used in
   # sidebars/notes/default
   # references/notes
+  # notes#sidebar
+
+  # NOTE: Until the API supports directional searches from a cursor (we only support forward)
+  # we are only paginating foward for now. The only other option would be to implement a state
+  # across multiple requests with a memcache key. If we tried to do it in javascript or dom, it
+  # could get really nasty & long if the user pages over and over
 
   # Local variables
   # notes  (required)
-  # link   (optional)
-  # title  (optional)
+  # ref    (required)
 
-   title = t("notes.community notes")
-   link = link || notes_path
+  title = t("notes.community notes")
 
-#widget-notes.widget.comm-notes
+#widget-notes.widget.comm-notes{"data-page" => @page, "data-paginate-link" => "/bible/#{ref.version}/#{ref.chapter_usfm}/notes", "data-cursor" => next_cursor}
   %div.hd
     %span
       = title
 
   - unless notes.empty?
     %ul
-    - notes.first(8).each do |note|
+    - notes.each do |note|
       %li
         - user = note.user
         - md_avatar = user.avatars.md_avatar
@@ -28,7 +32,8 @@
         %p.mute.small= user.name
 
     %div.ft
-      %a{href: link}= t('show all notes')
+      - if @page < 5 and notes.count == 5
+        %span.pagination.next= t('next page')
 
   - else
     %div.bd
