YV-949 fix version select audio icon display

--- a/app/assets/stylesheets/_dynamic_menus.sass
+++ b/app/assets/stylesheets/_dynamic_menus.sass
@@ -140,7 +140,7 @@
   margin: 0
   width: 100%
   @media only screen and (max-width: 768px)
-    table-layout: fixed  
+    table-layout: fixed
 
   @media only screen and (max-width: 768px)
     table-layout: fixed
@@ -199,6 +199,9 @@
     image: image-url("menu_book_chapter.png")
     repeat: repeat-y
     position: center top
+
+#menu_version .browse
+  width: 415px
 
 .dynamic_menu .browse
   padding-top: 5px
@@ -495,6 +498,16 @@
 .dynamic_menu.version_select th a
   min-width: 7em
 
+.version_select tr
+  width: 100%
+
+.version_select th
+  float: left
+  width: 120px
+
+.version_select td
+  float: left
+  width: 280px
 
 #menu_version td.audio a div
   background:
