--- a/app/assets/stylesheets/mobile/_nav_primary.sass
+++ b/app/assets/stylesheets/mobile/_nav_primary.sass
@@ -1,12 +1,12 @@
 #sidebar
   background-image: none
-  background: #EEEDEB
+  background: #ccc
   border: 0px
   width: 100%
   height: 100%
   padding: 0px
   position: absolute
-  top: 47px
+  top: 0
   z-index: 1005
   margin: 0px
 
