--- a/app/views/sidebars/subscriptions/_show.html.haml
+++ b/app/views/sidebars/subscriptions/_show.html.haml
@@ -20,37 +20,59 @@
   - settings_text = t("settings")
   %div.hd
     = link_to subscription.name, plan_path(subscription)
-    = link_to(edit_subscription_path(user_id: current_user.to_param, id: subscription),{class: "settings", title: settings_text}) do
-      %span= settings_text
+
 
   #calendar.bd.nopad.calendar
     - cal_text = t("plans.calendar")
 
-    %div.icon
-      =link_to(calendar_subscription_path(user_id: current_user.to_param, id: subscription), {title: cal_text }) do
-        %span= cal_text
-
-    %div.day
-      %h4= (subscription.respond_to?(:reading_date) ? subscription.reading_date(day) : current_date + (day - 1)).strftime('%a %b %-d')
-      .mute= pluralize(references.size,"reading")
-
-      // Next / Prev navigation
+    .calendar-prev
       - prev_text = t("plans.previous day") # used in 3 places below
       - if day > 1
         = link_to(subscription_path(user_id: current_user.to_param, id: subscription, day: ((day - 1) == subscription.current_day) ? nil : (day - 1), version: params[:version]), {class: "prev", title: prev_text }) do
-          %span= prev_text
+          %span.calendar-arrows
+            &nbsp;
+          %span.calendar-arrow-txt
+            Prev day
       - else
         = link_to("#", class: "disabled prev") do
-          %span= prev_text
+          %span.calendar-arrows
+            &nbsp;
+          %span.calendar-arrow-txt
+            Prev day
 
+    .calendar-day
+      =link_to(calendar_subscription_path(user_id: current_user.to_param, id: subscription), {title: cal_text }) do
+        %h4
+          = (subscription.respond_to?(:reading_date) ? subscription.reading_date(day) : current_date + (day - 1)).strftime('%a %b %-d')
+        .mute
+          = pluralize(references.size,"reading")
+
+    .calendar-next
       - next_text = t("plans.next day") # used in 3 places below
       - if day <= subscription.total_days - 1
         = link_to(subscription_path(user_id: current_user.to_param, id: subscription, day: ((day + 1) == subscription.current_day) ? nil : (day + 1), version: params[:version]), {class: "next", title: next_text}) do
-          %span= next_text
+          %span.calendar-arrows
+            &nbsp;
+          %span.calendar-arrow-txt
+            Next day
       - else
         = link_to("#", class: "disabled next") do
-          %span= next_text
+          %span.calendar-arrows
+            &nbsp;
+          %span.calendar-arrow-txt
+            Next day
 
+  .ft.calendar-links
+    = link_to(plan_path(subscription),{class: "calendar-links-about"}) do
+      About this plan
+
+    = link_to(edit_subscription_path(user_id: current_user.to_param, id: subscription),{class: "calendar-links-settings", title: settings_text}) do
+      = settings_text
+
+-# Links to scripture
+.widget.scripture-links
+  %h3.hd
+    = t("plans.read today")
   %ul.menu.basic
     - unless references.empty?
       - references.each_with_index do |ref,index|
