--- a/app/views/references/_reader.html.haml
+++ b/app/views/references/_reader.html.haml
@@ -44,11 +44,9 @@
     %div.reader-nav
       :ruby
         direction = 'rtl' if version.try(:rtl?)
-        prev_chapter  = reference.previous_chapter_hash
-        next_chapter  = reference.next_chapter_hash
 
-      = link_to( prev_chapter.human, reference_path(version: prev_chapter.version_id, reference: prev_chapter.usfm.first), class: "reader-prev #{direction}") if prev_chapter
-      = link_to( prev_chapter.human, reference_path(version: prev_chapter.version_id, reference: prev_chapter.usfm.first), class: "reader-next #{direction}") if next_chapter
+      = reader_previous_link(reference, {classes: "reader-prev #{direction}"})
+      = reader_next_link(reference, {classes: "reader-next #{direction}"})
 
     // Primary version content
     #version_primary{class: version.try(:text_direction),
