YV-899 adding Bible.com logos for Trademark Commission

--- a/app/assets/stylesheets/_pages.sass
+++ b/app/assets/stylesheets/_pages.sass
@@ -1,5 +1,10 @@
 // ------------------About page
 
+.b-logo
+  height: 60px
+  display: block
+  margin-bottom: 30px
+
 .about_content
   padding-right: 520px
   background: image-url("bg-about.png") no-repeat top right
