--- a/app/views/pages/about.html.haml
+++ b/app/views/pages/about.html.haml
@@ -2,6 +2,7 @@
 - @sidebar = false
 
 %article
+  %img{src: asset_path('bible.com-logo-700x150.png'), title: t('bible versions'), class: 'b-logo float_right'}
   %h1= t('about title')
   .about_content
     %h2= t('about page.relevancy')
