--- a/app/views/layouts/settings.html.haml
+++ b/app/views/layouts/settings.html.haml
@@ -2,6 +2,8 @@
 - # :edit, :notifications, :email, :password, :devices, :account
 - # found in users/_mobile_menu partial
 
+- current_user ||= @user
+
 - content_for :title do
   = t('users.settings')
 
