--- a/app/views/notifications/_settings_group.html.haml
+++ b/app/views/notifications/_settings_group.html.haml
@@ -1,9 +1,10 @@
 %p= info
 
-%span.settings-group-email
-  = check_box_tag "settings[#{type.to_s}][email]", "1", @settings.notification_settings.send(type.to_sym).email
-  = label_tag "settings[#{type.to_s}][email]", "Email"
+.settings-group
+  %span.settings-group-email
+    = check_box_tag "settings[#{type.to_s}][email]", "1", @settings.notification_settings.send(type.to_sym).email
+    = label_tag "settings[#{type.to_s}][email]", t("users.email")
 
-%span.settings-group-mobile
-  = check_box_tag "settings[#{type.to_s}][push]", "1", @settings.notification_settings.send(type.to_sym).push
-  = label_tag "settings[#{type.to_s}][push]", "Mobile"
+  %span.settings-group-mobile
+    = check_box_tag "settings[#{type.to_s}][push]", "1", @settings.notification_settings.send(type.to_sym).push
+    = label_tag "settings[#{type.to_s}][push]", t("users.mobile")
