localize time WIP

--- a/app/assets/stylesheets/_social.sass
+++ b/app/assets/stylesheets/_social.sass
@@ -937,8 +937,7 @@ body.transition .moment
     li
       display: block
       height: 28px
-      padding: 0 0 0 35px
-      line-height: 34px
+      padding: 5px 0 0 35px
       background: image-url("social-actions-sprite.png") no-repeat
 
     li.action-like
