--- a/app/views/sidebars/subscriptions/_show.html.haml
+++ b/app/views/sidebars/subscriptions/_show.html.haml
@@ -78,7 +78,7 @@
       - references.each_with_index do |ref,index|
         %li.content_target{class: (content_page == index) ? "active #{content_page}" : nil }
           = form_tag(subscription_path(user_id: current_user.to_param, id: subscription), method: :put) do
-            = hidden_field_tag(:ref,            ref.reference)
+            = hidden_field_tag(:ref,            ref.reference.to_param)
             = hidden_field_tag(:completed,      (!ref.completed))
             = hidden_field_tag(:version,        subscription.version_id)
             = hidden_field_tag(:day_target,     day.to_s)
