Subscription bug fixes
More robust plan finder and don’t render js_templates if there isn’t a
presenter

--- a/app/views/shared/_js_templates.html.haml
+++ b/app/views/shared/_js_templates.html.haml
@@ -1,4 +1,4 @@
-- if is_reader_page?
+- if is_reader_page? && presenter.present?
   %script#pane-highlight-tmpl{type:"text/x-handlebars-template"}
     :plain
       <div class="tab-panel highlight-pane" id="highlight-pane">
