--- a/app/assets/stylesheets/mobile/_retina.scss
+++ b/app/assets/stylesheets/mobile/_retina.scss
@@ -188,4 +188,219 @@ only screen and (                min-resolution: 2dppx) {
     background-size: 10px 17px;
   }
 
+
+  // !Blank slate pages
+
+  #main {
+
+    .slate-bookmarks {
+      background: #fff image-url("icon-bookmark-128.png") no-repeat center 40px;
+      background-size: 64px 64px;
+    }
+
+    .slate-highlights {
+      background: #fff image-url("icon-highlight-128.png") no-repeat center 40px;
+      background-size: 64px 64px;
+    }
+
+    .slate-notes {
+      background: #fff image-url("icon-notes-128.png") no-repeat center 40px;
+      background-size: 64px 64px;
+    }
+
+    .slate-badges {
+      background: #fff image-url("icon-badge-128.png") no-repeat center 40px;
+      background-size: 64px 64px;
+    }
+
+    .slate-activity {
+      background: #fff image-url("icon-activity-128.png") no-repeat center 40px;
+      background-size: 64px 64px;
+    }
+
+    .slate-friends {
+      background: #fff image-url("icon-group-128.png") no-repeat center 40px;
+      background-size: 64px 64px;
+    }
+
+  }
+
+  // !Home
+
+  .moment-actions-share a,
+  .moment-actions-comment a,
+  .moment-actions-like a {
+    background: image-url("social-actions-sprite@2x.png") no-repeat;
+    background-size: 20px 800px;
+  }
+
+  .moment-actions-share a {
+    background-position: 10px 10px;
+  }
+
+  .moment-actions-comment a {
+    background-position: 10px -129px;
+  }
+
+  .moment-actions-like a {
+    background-position: 10px -36px;
+  }
+
+  .moment-actions-like a.liked {
+    background-position: 10px -82px;
+  }
+
+  .moment-no-note-title {
+    background: image-url("moment-no-note-title-bg@2x.png") repeat-y left top;
+    background-size: 23px 1px;
+  }
+
+  .moment-no-note-text {
+    background: image-url("moment-no-note-text-bg@2x.png") repeat-y left top;
+    background-size: 600px 17px;
+  }
+
+  .moment-vod-calendar {
+    background: image-url("social-vod-icon@2x.png") no-repeat left center;
+    background-size: 48px 48px;
+  }
+
+  .moment-hi .moment-icon,
+  .moment-bm .moment-icon,
+  .moment-rp .moment-icon,
+  .moment-grp .moment-icon,
+  .moment-dl .moment-icon,
+  .moment-bdg .moment-icon,
+  .moment-vid .moment-icon,
+  .moment-no .moment-icon,
+  .moment-vod .moment-icon,
+  .moment-sys .moment-icon,
+  .moment-fr .moment-icon {
+    background: image-url("moment-icon-sprite@2x.png") no-repeat;
+    background-size: 520px 52px;
+  }
+
+
+ // !Moments
+
+  .moment-hi .moment-icon {
+    background-position: -259px 0;
+  }
+
+  .moment-bm .moment-icon {
+    background-position: -102px 0;
+  }
+
+  .moment-rp .moment-icon {
+    background-position: -363px 0;
+  }
+
+  .moment-grp .moment-icon {
+    background-position: -207px 0;
+  }
+
+  .moment-dl .moment-icon {
+    background-position: -155px 0;
+  }
+
+  .moment-bdg .moment-icon {
+    background-position: 51px 0;
+  }
+
+  .moment-vid .moment-icon {
+    background-position: -467px 0;
+  }
+
+  .moment-no .moment-icon {
+    background-position: -311px 0;
+  }
+
+  .moment-vod .moment-icon {
+    background-position: 3px 0;
+  }
+
+  .moment-sys .moment-icon {
+    background-position: -416px 0;
+  }
+
+  .moment-fr .moment-icon {
+    background-position: -207px 0;
+  }
+
+  .moment-comment-delete {
+    background: image-url("social-actions-sprite@2x.png") no-repeat center -417px;
+    background-size: 20px 800px;
+  }
+
+  .moment-comment-delete:hover {
+    background: image-url("social-actions-sprite.png") no-repeat center -471px;
+    background-size: 20px 800px;
+  }
+
+
+  // !Edit and delete controls
+
+  .moment-content-actions-edit {
+    background: image-url("edit-delete-sprite@2x.png") no-repeat 1px 0;
+  }
+
+  .moment-action-delete {
+    background: image-url("edit-delete-sprite@2x.png") no-repeat 0px -69px;
+  }
+
+  .moment-content-actions-edit,
+  .moment-action-delete {
+    background-size: 15px 120px;
+  }
+
+  .moment-content-actions-edit:hover {
+    background-position: 1px -35px;
+  }
+
+  .moment-action-delete:hover {
+    background-position: 0px -104px;
+  }
+
+
+  // Reader
+
+  .color span {
+    background: image-url("menu_color_selected@2x.png") no-repeat center 3px;
+    background-size: 17px 41px;
+  }
+
+
+  // !Widgets
+
+  .featured-plans h3.hd,
+  .my-plans h3.hd {
+    background: image-url("widgets-sprite@2x.png") no-repeat 15px -69px;
+    background-size: 16px 120px;
+  }
+
+  .widget-find-friends h3.hd {
+    background: image-url("widgets-sprite@2x.png") no-repeat 15px -27px;
+    background-size: 16px 120px;
+  }
+
+  #widget-notes .hd span {
+    background: image-url("widgets-sprite@2x.png") no-repeat 0 1px;
+    background-size: 16px 120px;
+  }
+
+  .reference_tokens > li a {
+    background: #0093d0 image-url("close_reference_token@2x.png") no-repeat right 5px;
+    background-size: 24px 41px;
+  }
+
+  #menu_verse_actions #share-pane .share_logo_fb {
+    background: image-url("reader-share-sprite@2x.png") no-repeat 0 0;
+    background-size: 32px 150px;
+  }
+
+  #menu_verse_actions #share-pane .share_logo_twitter {
+    background: image-url("reader-share-sprite@2x.png") no-repeat 0 -43px;
+    background-size: 32px 150px;
+  }
+
 }
