Localization setup/config
Switch to mra gem, precompile locale files, include in header, filter
only: moments, social top level tags

--- a/app/views/shared/_javascripts.html.haml
+++ b/app/views/shared/_javascripts.html.haml
@@ -1,4 +1,5 @@
 = javascript_include_tag "application"
-
+/ JS locale file
+= javascript_include_tag "i18n/#{I18n.locale}"
 - if content_for? :javascripts
   = yield :javascripts
