--- a/app/assets/stylesheets/bdc_home.sass
+++ b/app/assets/stylesheets/bdc_home.sass
@@ -63,13 +63,21 @@ body, html
 
   #header_outer
     position: relative
-    background: transparent
+    background-color: transparent
     padding: 0
+    top: auto
+    z-index: auto
+    height: auto
+    width: auto
+    left: auto
 
   #header
     width: 100%
     padding: 0
     border-radius: 0
+    height: auto
+    line-height: normal
+    border: none
 
     form, nav
       display: none
@@ -91,7 +99,7 @@ body, html
       width: 40%
 
   #container.no_sidebar
-    padding-left: 0px
+    padding: 0px
     background: transparent
     width: auto
 
@@ -279,7 +287,6 @@ body, html
       overflow: hidden
 
     a
-      width: 100%
       padding: 5px 0px
 
     .fb
