--- a/app/views/shared/_js_templates.html.haml
+++ b/app/views/shared/_js_templates.html.haml
@@ -126,7 +126,7 @@
                 <span class="fb"></span>
                 <span class="fb-text">
                   Facebook
-                  #{t('ref.characters remaining')}
+                  #{t('ui.characters remaining')}
                    (420 Maximum)
                 </span>
               </span>
@@ -144,7 +144,7 @@
                 <span class="tw"></span>
                 <span class="tw-text">
                   Twitter
-                  #{t('ref.characters remaining')}
+                  #{t('ui.characters remaining')}
                   (140 Maximum)
                 </span>
               </span>
