fix timeago msging in handlebars templates, fix rp localization keys, fix comment templates

--- a/app/assets/javascripts/templates/moments/_comment.hbs
+++ b/app/assets/javascripts/templates/moments/_comment.hbs
@@ -7,7 +7,7 @@
   <p class="moment-comments-list-text">
     <a href="{{user.path}}">{{user.name}}</a>
     {{content}}
-    <span class="moment-comment-dt">{{fromNow created_dt}}</span>
+    <span class="moment-comment-dt">{{time_ago}}</span>
   </p>
   {{#if owned_by_me }}
   <a href="#" class="moment-comment-delete" data-comment-id="{{id}}">x</a>
