--- a/app/assets/stylesheets/_widgets.sass
+++ b/app/assets/stylesheets/_widgets.sass
@@ -393,12 +393,13 @@
     .calendar-next
       a
         color: #9F9EA2
-        font-size: 11px
+        font-size: 8px
         text-transform: uppercase
         line-height: 1em
         display: block
-        width: 49px
+        width: 69px
         height: 69px
+        padding: 0 3px
 
         .calendar-arrows
           display: block
@@ -412,7 +413,7 @@
         opacity: .2
 
     .calendar-prev
-      width: 49px
+      width: 75px
       border-right: 1px solid #ebebeb
       text-align: center
 
@@ -420,22 +421,23 @@
         background-position: -21px 0
 
     .calendar-day
-      width: 198px
+      width: 147px
+      text-align: center
 
       a
         display: block
         color: #333
         height: 69px
-        width: 141px
-        background: image-url("icon-plans-64.png") no-repeat 15px 20px
+        width: 147px
+        // background: image-url("icon-plans-64.png") no-repeat 15px 20px
         background-size: 28px 32px
-        padding: 18px 0 0 57px
+        padding: 18px 0 0 0px
 
         h4
           margin: 0
 
     .calendar-next
-      width: 49px
+      width: 75px
       border-left: 1px solid #ebebeb
       text-align: center
 
