--- a/app/views/sidebars/subscriptions/_show.html.haml
+++ b/app/views/sidebars/subscriptions/_show.html.haml
@@ -32,20 +32,20 @@
           %span.calendar-arrows
             &nbsp;
           %span.calendar-arrow-txt
-            Prev day
+            = prev_text
       - else
         = link_to("#", class: "disabled prev") do
           %span.calendar-arrows
             &nbsp;
           %span.calendar-arrow-txt
-            Prev day
+            = prev_text
 
     .calendar-day
       =link_to(calendar_subscription_path(user_id: current_user.to_param, id: subscription), {title: cal_text }) do
         %h4
           = (subscription.respond_to?(:reading_date) ? subscription.reading_date(day) : current_date + (day - 1)).strftime('%a %b %-d')
         .mute
-          = pluralize(references.size,"reading")
+          = pluralize(references.size,t("plans.widget.reading"),t("plans.widget.readings"))
 
     .calendar-next
       - next_text = t("plans.next day") # used in 3 places below
@@ -54,17 +54,17 @@
           %span.calendar-arrows
             &nbsp;
           %span.calendar-arrow-txt
-            Next day
+            = next_text
       - else
         = link_to("#", class: "disabled next") do
           %span.calendar-arrows
             &nbsp;
           %span.calendar-arrow-txt
-            Next day
+            = next_text
 
   .ft.calendar-links
     = link_to(plan_path(subscription),{class: "calendar-links-about"}) do
-      About this plan
+      = t("plans.about this plan")
 
     = link_to(edit_subscription_path(user_id: current_user.to_param, id: subscription),{class: "calendar-links-settings", title: settings_text}) do
       = settings_text
