Updated RP moments HAML Split stylesheets into application and mobile to fix IE9 problem

--- a/app/assets/stylesheets/mobile/_social.sass
+++ b/app/assets/stylesheets/mobile/_social.sass
@@ -215,7 +215,7 @@ body.transition .moment
 .moment-time
   padding: 17px 0 5px 11px
   font-size: 11px
-  width: 300px
+
 
 // !Comments attached to a moment
 
@@ -802,6 +802,18 @@ body.transition .moment
   .moment-icon
     background-position: -364px 0
 
+  .moment-rp-details
+    clear: both
+
+    a
+      font-weight: normal
+      color: #444
+      display: block
+
+      b
+        display: block
+        color: #0084c8
+        font-size: 18px
 
 // !Group moment
 
