--- a/app/assets/stylesheets/_social.sass
+++ b/app/assets/stylesheets/_social.sass
@@ -760,6 +760,20 @@ body.transition .moment
   .moment-icon
     background-position: -364px 0
 
+  .moment-rp-details
+    clear: both
+
+    a
+      font-weight: normal
+      color: #444
+      display: block
+      width: 465px
+      margin: 0 0 0 65px
+
+      b
+        display: block
+        color: #0084c8
+        font-size: 18px
 
 // !Group moment
 
