--- a/app/assets/stylesheets/_social.sass
+++ b/app/assets/stylesheets/_social.sass
@@ -775,13 +775,13 @@ body.transition .moment
       font-weight: normal
       color: #444
       display: block
-      font-size: 13px
-      line-height: 1.5em
+      width: 465px
+      margin: 0 0 0 65px
 
       b
         display: block
-        color: #444
-        font-size: 16px
+        color: #0084c8
+        font-size: 18px
         line-height: 1.3em
         margin: 0 0 15px
         +box-sizing(border-box)
