--- a/app/assets/stylesheets/bdc_home.sass
+++ b/app/assets/stylesheets/bdc_home.sass
@@ -533,7 +533,7 @@ body, html
       padding-left: 20px
 
       h1
-        font: 44px RobotoLight, Arial, sans-serif
+        font: 44px 'RobotoLight', Arial, sans-serif
         letter-spacing: -0.05em
         width: 560px
       p
@@ -832,3 +832,13 @@ body, html
       .take_bible
         background: image-url("take_bible_icon@2x.png") no-repeat center 0px
         background-size: 188px 218px
+
+
+// !Drop Typekit support for some languages
+
+html[data-locale="th"]
+  #hero #hero_content h1,
+  #main article .bottom_cta h2,
+  #main article .explore_cta h2
+    font-family: sans-serif
+
