--- a/app/views/shared/_head.html.haml
+++ b/app/views/shared/_head.html.haml
@@ -17,7 +17,8 @@
   %meta{name: "msApplication-ID", content: "af5f6405-7860-49a9-a6b4-a47381974e1d"}
   %meta{name: "msApplication-PackageFamilyName", content: "LifeChurch.tv.Bible_d1phjsdba8cbj"}
 
-  = stylesheet_link_tag 'application'
+  = stylesheet_link_tag 'mobile', media: "all and (max-width: 768px)"
+  = stylesheet_link_tag 'application', media: "all and (min-width: 769px)"
   = javascript_include_tag "/assets/jw/jwplayer.js"
   %script jwplayer.key="78lie9ccvQjr8uJGZzLhFeI1t94sTOzTqA3A9QpRvK0="
 
