--- a/app/assets/stylesheets/mobile/_social.sass
+++ b/app/assets/stylesheets/mobile/_social.sass
@@ -802,6 +802,18 @@ body.transition .moment
   .moment-icon
     background-position: -364px 0
 
+  .moment-rp-details
+    clear: both
+
+    a
+      font-weight: normal
+      color: #444
+      display: block
+
+      b
+        display: block
+        color: #0084c8
+        font-size: 18px
 
 // !Group moment
 
