Small tweaks to RP day view navigation Added link to calendar Updated error message styling

--- a/app/assets/stylesheets/_dynamic_menus.sass
+++ b/app/assets/stylesheets/_dynamic_menus.sass
@@ -359,11 +359,11 @@
 
   .verse-actions-success-message
     background:
-      color: #d9e4c9
-    border-color: #91b164
-    color: #4b7518
+      color: #59B200
+    color: #fff
     margin: 0
-    padding: 8px
+    padding: 3px 10px
+    +border-radius(5px)
 
 
 #menu_verse_actions .references
