--- a/app/assets/stylesheets/_form_elements.sass
+++ b/app/assets/stylesheets/_form_elements.sass
@@ -46,10 +46,8 @@ br + textarea
 
 #flash_error, .form_errors
   background:
-    color: #f4cccc
-    image: image-url("flash_error.png")
-  border-color: #e89494
-  color: #aa0303
+    color: #aa0303
+  color: #fff
 
 #flash_notice
   background:
@@ -59,14 +57,8 @@ br + textarea
   color: #4b7518
 
 .form_errors
-  background:
-    repeat: no-repeat
-    position: right bottom
-  border: 1px solid #e89494
   font-size: 16px
-  opacity: 0.95
-  text-shadow: #fff 0 1px 0
-  padding: 10px 20px
+  padding: 3px 20px
   box-sizing: border-box
   +round
   +box-shadow(#fff 0 1px 0 0)
