--- a/app/assets/stylesheets/mobile/_widgets.sass
+++ b/app/assets/stylesheets/mobile/_widgets.sass
@@ -389,10 +389,6 @@
       width: 30%
 
       a
-        color: #9F9EA2
-        font-size: 10px
-        text-transform: uppercase
-        line-height: 1em
         display: block
         height: 44px
         position: relative
@@ -409,6 +405,9 @@
           display: block
           width: 50px
           position: absolute
+          color: #9F9EA2
+          font-size: 10px
+          line-height: 1em
 
       a.disabled
         opacity: .2
@@ -431,19 +430,16 @@
     .calendar-day
       width: 39%
 
+      h4
+        margin: 0
+        text-align: center
+        padding: 5px 0 0
+
       a
         display: block
-        color: #333
-        height: 44px
         background-size: 28px 32px
-        padding: 4px 0 0
         text-align: center
-
-        h4
-          margin: 0
-
-        .mute
-          font-size: .8em
+        font-size: 12px
 
     .calendar-next
       border-left: 1px solid #ebebeb
@@ -489,6 +485,14 @@
   .mobile
     display: none
 
+html[data-locale="en"]
+  #widget-plan-controls
+    #calendar
+      .calendar-prev,
+      .calendar-next
+        a
+          .calendar-arrow-txt
+            font-size: 12px
 
 // --- Custom widgets ------
 
